--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,4 @@
 general:
-  build_dir: taurus
   branches:
     only:
       - DEVOPS-53-circleci
@@ -10,8 +9,8 @@ dependencies:
     - curl -O https://capnproto.org/capnproto-c++-0.5.3.tar.gz
     - tar zxf capnproto-c++-0.5.3.tar.gz
     - (cd capnproto-c++-0.5.3 && ./configure && make check && sudo make install)
-    - (cd nta.utils && python setup.py install)
-    - (cd htmengine && python setup.py install)
-    - (cd infrastructure && python setup.py install)
-    - (cd taurus.metric_collectors && python setup.py install)
-    - (cd taurus && python setup.py install)
+    - (cd numenta-apps/nta.utils && python setup.py install)
+    - (cd numenta-apps/htmengine && python setup.py install)
+    - (cd numenta-apps/infrastructure && python setup.py install)
+    - (cd numenta-apps/taurus.metric_collectors && python setup.py install)
+    - (cd numenta-apps/taurus && python setup.py install)
