--- a/circle.yml
+++ b/circle.yml
@@ -5,12 +5,12 @@ general:
 machine:
   environment:
     PYTHONPATH: /home/ubuntu/local/lib/python2.7/site-packages
+    CC: clang
+    CXX: clang++
 dependencies:
   cache_directories:
     - capnproto-c++-0.5.3
   pre:
-    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 20
-    - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 20
     - curl -O https://capnproto.org/capnproto-c++-0.5.3.tar.gz
     - tar zxf capnproto-c++-0.5.3.tar.gz
     - (cd capnproto-c++-0.5.3 && ./configure && make check && sudo make install)
