--- a/circle.yml
+++ b/circle.yml
@@ -8,9 +8,9 @@ machine:
     CC: clang
     CXX: clang++
 dependencies:
-  cache_directories:
-    - capnproto-c++-0.5.3
   pre:
+    - sudo update-alternatives --install /usr/bin/cc clang /usr/bin/clang 20
+    - sudo update-alternatives --install /usr/bin/c++ clang++ /usr/bin/clang++ 20
     - curl -O https://capnproto.org/capnproto-c++-0.5.3.tar.gz
     - tar zxf capnproto-c++-0.5.3.tar.gz
     - (cd capnproto-c++-0.5.3 && ./configure && make check && sudo make install)
