--- a/circle.yml
+++ b/circle.yml
@@ -9,8 +9,8 @@ machine:
     CXX: clang++
 dependencies:
   pre:
-    - sudo update-alternatives --install /usr/bin/cc clang /usr/bin/clang 20
-    - sudo update-alternatives --install /usr/bin/c++ clang++ /usr/bin/clang++ 20
+    - sudo update-alternatives --install /usr/bin/cc cc /usr/bin/clang 100
+    - sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/clang++ 100
     - curl -O https://capnproto.org/capnproto-c++-0.5.3.tar.gz
     - tar zxf capnproto-c++-0.5.3.tar.gz
     - (cd capnproto-c++-0.5.3 && ./configure && make check && sudo make install)
