--- a/circle.yml
+++ b/circle.yml
@@ -32,6 +32,13 @@ dependencies:
     - pip install `cat taurus/requirements.txt | grep uwsgi` --user
     - (cd taurus && python setup.py develop --prefix=/home/ubuntu/local)
   post:
+    - mkdir -p logs
     - taurus-set-rabbitmq --host=${RABBITMQ_HOST} --user=${RABBITMQ_USER} --password=${RABBITMQ_PASSWD}
     - taurus-set-sql-login --host=${MYSQL_HOST} --user=${MYSQL_USER} --password=
     - taurus-create-db --host=${MYSQL_HOST} --user=${MYSQL_USER} --password= --suppress-prompt-and-continue-with-deletion
+    - (cd /home/ubuntu/numenta-apps/taurus/taurus/engine/repository && python migrate.py)
+test:
+  override:
+    - py.test nta.utils/tests/unit
+    - py.test htmengine/tests/unit
+    - py.test taurus/tests/unit
