--- a/circle.yml
+++ b/circle.yml
@@ -38,7 +38,10 @@ dependencies:
     - taurus-create-db --host=${MYSQL_HOST} --user=${MYSQL_USER} --password= --suppress-prompt-and-continue-with-deletion
     - (cd /home/ubuntu/numenta-apps/taurus/taurus/engine/repository && python migrate.py)
     - (cd /home/ubuntu/numenta-apps/taurus/pipeline/circleci && ./generate-ssl-cert.sh)
+    - cp -r taurus/pipeline/circleci/overrides/taurus/* taurus/conf/
 test:
+  pre:
+    - sudo nginx -p taurus -c conf/nginx-taurus.conf
   override:
     - py.test nta.utils/tests/unit
     - py.test htmengine/tests/unit
