Properly copy overrides, stop system nginx

--- a/circle.yml
+++ b/circle.yml
@@ -40,9 +40,11 @@ dependencies:
     - taurus-create-db --host=${MYSQL_HOST} --user=${MYSQL_USER} --password= --suppress-prompt-and-continue-with-deletion
     - (cd /home/ubuntu/numenta-apps/taurus/taurus/engine/repository && python migrate.py)
     - (cd /home/ubuntu/numenta-apps/taurus/pipeline/circleci && ./generate-ssl-cert.sh)
-    - cp -r taurus/pipeline/circleci/overrides/taurus/* taurus/conf/
+    - cp -r taurus/pipeline/circleci/overrides/taurus/conf/* taurus/conf/
+    - cp -r taurus/pipeline/circleci/ssl taurus/conf/
 test:
   pre:
+    - service nginx stop
     - sudo nginx -p taurus -c conf/nginx-taurus.conf
   override:
     - py.test nta.utils/tests/unit
