--- a/taurus/pipeline/circleci/overrides/taurus/conf/supervisord.conf
+++ b/taurus/pipeline/circleci/overrides/taurus/conf/supervisord.conf
@@ -43,22 +43,6 @@ stdout_logfile=logs/uwsgi.log
 redirect_stderr=true
 stopsignal=INT
 
-;*************** RABBITMQ METRIC COLLECTOR **************
-[program:rmq-metric-collector]
-# The metric destination (e.g., "serverdns.tld:2003") must be specified via
-# environment variable TAURUS_RMQ_METRIC_DEST. We don't hardcode the value in
-# order to avoid having undersirable metric data samples accidentally forwarded
-# from developer laptops and other test machines to the production "htm-it"
-# application server.
-command=python -m htmengine.monitors.rmq_metric_collector_agent --metric-addr=%(ENV_TAURUS_RMQ_METRIC_DEST)s --metric-prefix=%(ENV_TAURUS_RMQ_METRIC_PREFIX)s
-process_name=%(program_name)s_%(process_num)02d
-directory=%(here)s/..
-stdout_logfile_maxbytes=50MB
-stdout_logfile_backups=20
-stdout_logfile=logs/rmq_metric_collector_agent.log
-redirect_stderr=true
-stopsignal=INT
-
 ;*************** DYNAMODB SERVICE **************
 [program:dynamodb-service]
 command=python -m taurus.engine.runtime.dynamodb.dynamodb_service
@@ -73,7 +57,7 @@ stopsignal=INT
 
 ;*************** TAURUS-GROUP **************
 [group:taurus]
-programs=taurus-api,rmq-metric-collector
+programs=taurus-api
 
 [include]
 files = ../../htmengine/conf/supervisord-base.conf
