--- a/unicorn/package.json
+++ b/unicorn/package.json
@@ -17,8 +17,8 @@
   "python": "app/node_modules/.bin/python",
   "scripts": {
     "postinstall": "install-app-deps",
-    "build:osx": "npm install && npm run prepare && npm run dist:osx",
-    "build:win": "npm install && npm run prepare && npm run dist:win",
+    "build:osx": "npm run clean && npm install && npm run prepare && npm run dist:osx",
+    "build:win": "npm run clean && npm install && npm run prepare && run dist:win",
     "pack:osx": "build --platform darwin --arch x64",
     "pack:win": "build --platform win32 --arch x64",
     "dist:osx": "build --platform darwin --arch x64",
@@ -29,9 +29,10 @@
     "clean:osx": "rimraf dist/*-darwin-x64",
     "clean:win": "rimraf dist/win",
     "clean:db:osx": "rimraf $HOME/Library/Application\\ Support/HTM\\ Studio/*",
+    "clean:db:win": "rimraf \"%APPDATA%\\HTM Studio\"",
     "clean:docs": "rimraf docs/",
     "clean:coverage": "rimraf coverage/",
-    "clean:npm": "rimraf app/node_modules/ && rimraf node_modules/ && npm cache clean",
+    "clean:npm": "rimraf app/node_modules/ && npm cache clean",
     "clean:python": "rimraf py/build && rimraf py/dist && rimraf py/*.egg-info",
     "clean:webpack": "rimraf app/browser/assets/bundle",
     "electron": "electron app",
@@ -76,9 +77,8 @@
     "babel-register": "6.7.2",
     "css-loader": "0.23.1",
     "csv-streamify": "3.0.3",
-    "electron-builder": "3.2.0",
-    "electron-debug": "0.5.2",
-    "electron-prebuilt": "0.37.3",
+    "electron-builder": "3.5.1",
+    "electron-prebuilt": "0.37.5",
     "esdoc": "0.4.6",
     "esdoc-es7-plugin": "0.0.3",
     "eslint": "1.10.3",
